create cors midleware and docs for category
