# docs/swagger.yaml
@@ -1,9 +1,177 @@
 basePath: /api/v1
-host: 127.0.0.1
+definitions:
+  github_com_Hodorev-Evgeny_ExpensesTracker_internal_core_transport_http_response.ErrorResponse:
+    properties:
+      error:
+        type: string
+      massage:
+        type: string
+    type: object
+  internal_features_category_transport_http.CategoryRequest:
+    properties:
+      category_name:
+        example: Medicine
+        maxLength: 20
+        minLength: 3
+        type: string
+      user_id:
+        example: 1
+        type: integer
+    required:
+    - category_name
+    - user_id
+    type: object
+  internal_features_category_transport_http.CategoryResponse:
+    properties:
+      category_name:
+        example: Medicine
+        type: string
+      id:
+        example: 4
+        type: integer
+      user_id:
+        example: 1
+        type: integer
+    type: object
+  internal_features_category_transport_http.CategoryUpdateRequest:
+    properties:
+      title:
+        type: string
+    required:
+    - title
+    type: object
+host: 127.0.0.1:8080
 info:
   contact: {}
   description: This server help you tracker money
   title: ExpensesTracker
   version: "0.7"
-paths: {}
+paths:
+  /category:
+    get:
+      consumes:
+      - application/json
+      description: Get all category without query parm
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Get all category successfully
+          schema:
+            items:
+              $ref: '#/definitions/internal_features_category_transport_http.CategoryResponse'
+            type: array
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/github_com_Hodorev-Evgeny_ExpensesTracker_internal_core_transport_http_response.ErrorResponse'
+      summary: Get all category
+      tags:
+      - category
+    post:
+      consumes:
+      - application/json
+      description: Create new category in database
+      parameters:
+      - description: CreateCategory body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/internal_features_category_transport_http.CategoryRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Create new category successfully
+          schema:
+            $ref: '#/definitions/internal_features_category_transport_http.CategoryResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/github_com_Hodorev-Evgeny_ExpensesTracker_internal_core_transport_http_response.ErrorResponse'
+      summary: Create category
+      tags:
+      - category
+  /category/{id}:
+    delete:
+      description: Delete category in database by id
+      parameters:
+      - description: Id delete category
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "204":
+          description: Delete category by id successfully
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/github_com_Hodorev-Evgeny_ExpensesTracker_internal_core_transport_http_response.ErrorResponse'
+      summary: Delete category
+      tags:
+      - category
+    get:
+      consumes:
+      - application/json
+      description: Get category in database by id
+      parameters:
+      - description: Id category
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Get category successfully
+          schema:
+            $ref: '#/definitions/internal_features_category_transport_http.CategoryResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/github_com_Hodorev-Evgeny_ExpensesTracker_internal_core_transport_http_response.ErrorResponse'
+        "404":
+          description: Category not found
+          schema:
+            $ref: '#/definitions/github_com_Hodorev-Evgeny_ExpensesTracker_internal_core_transport_http_response.ErrorResponse'
+      summary: Get category
+      tags:
+      - category
+    patch:
+      consumes:
+      - application/json
+      description: Patch category in database by id
+      parameters:
+      - description: Id category
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Parm from path category
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/internal_features_category_transport_http.CategoryUpdateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Patch category successfully
+          schema:
+            $ref: '#/definitions/internal_features_category_transport_http.CategoryResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/github_com_Hodorev-Evgeny_ExpensesTracker_internal_core_transport_http_response.ErrorResponse'
+        "404":
+          description: Category not found
+          schema:
+            $ref: '#/definitions/github_com_Hodorev-Evgeny_ExpensesTracker_internal_core_transport_http_response.ErrorResponse'
+      summary: Patch category
+      tags:
+      - category
 swagger: "2.0"
