# internal/features/category/transport/http/create_category.go
@@ -10,6 +10,16 @@ import (
 
 type CategoryRequest CategoryDTO
 
+// CreateCategory 	godoc
+// @Summary 		Create category
+// @Description 	Create new category in database
+// @Tags 			category
+// @Accept 			json
+// @Produce 		json
+// @Param 			request body	CategoryRequest true "CreateCategory body"
+// @Success			201	{object}	CategoryResponse "Create new category successfully"
+// @Failure 		400	{object}	response.ErrorResponse "Bad request"
+// @Router 			/category		[post]
 func (h *CategoryHTTPHandler) CreateNewCategory(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	log := core_logger.FromContext(ctx)
