# internal/features/category/transport/http/delete_category.go
@@ -8,6 +8,14 @@ import (
 	core_http_utils "github.com/Hodorev-Evgeny/ExpensesTracker/internal/core/transport/http/utils"
 )
 
+// DeleteCategory 	godoc
+// @Summary 		Delete category
+// @Description 	Delete category in database by id
+// @Tags 			category
+// @Param			id	path int true	"Id delete category"
+// @Success			204					"Delete category by id successfully"
+// @Failure 		400	{object}		response.ErrorResponse "Bad request"
+// @Router 			/category/{id}		[delete]
 func (h *CategoryHTTPHandler) DeleteCategory(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	log := core_logger.FromContext(ctx)
