# internal/features/category/transport/http/getall_category.go
@@ -9,6 +9,15 @@ import (
 
 type CategoryListResponse []CategoryResponse
 
+// GetAllCategorys		godoc
+// @Summary 			Get all category
+// @Description 		Get all category without query parm
+// @Tags 				category
+// @Accept 				json
+// @Produce 			json
+// @Success				200	{array}		CategoryResponse "Get all category successfully"
+// @Failure 			400	{object}	response.ErrorResponse "Bad request"
+// @Router 				/category		[get]
 func (h *CategoryHTTPHandler) GetAllCategorys(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	log := core_logger.FromContext(ctx)
